--- a/DataScript/SRC/test.ipynb
+++ b/DataScript/SRC/test.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -238,21 +238,67 @@
        "[10729 rows x 9 columns]"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "road = gpd.read_file(\"C:/Users/flavi/Travail/Switch-23/includes/road/basicScenario/roadImportance3/roads.shp\")\n",
+    "road = gpd.read_file(\"C:/Users/flavi/Travail/Switch-23/includes/roads/basicScenario/roadImportance3/roads.shp\")\n",
     "road"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            ID            NATURE IMPORTANCE  NB_VOIES  \\\n",
+      "15    TRONROUT0000000073515697  Type autoroutier          1       3.0   \n",
+      "16    TRONROUT0000000073516035  Type autoroutier          1       3.0   \n",
+      "17    TRONROUT0000000073480347  Type autoroutier          1       4.0   \n",
+      "18    TRONROUT0000000329822605  Type autoroutier          1       3.0   \n",
+      "186   TRONROUT0000000073487349          Bretelle          1       1.0   \n",
+      "...                        ...               ...        ...       ...   \n",
+      "5661  TRONROUT0000000073515067  Type autoroutier          1       3.0   \n",
+      "5662  TRONROUT0000000073515081  Type autoroutier          1       3.0   \n",
+      "5663  TRONROUT0000000073515076  Type autoroutier          1       3.0   \n",
+      "5664  TRONROUT0000000073515119  Type autoroutier          1       3.0   \n",
+      "5665  TRONROUT0000000073515128  Type autoroutier          1       3.0   \n",
+      "\n",
+      "              SENS  VIT_MOY_VL LARGEUR VEHICULES  \\\n",
+      "15     Sens direct         130    10.5         0   \n",
+      "16     Sens direct         130    13.5         0   \n",
+      "17     Sens direct         130    13.5         0   \n",
+      "18     Sens direct         130    10.5         0   \n",
+      "186   Sens inverse         130     3.5         0   \n",
+      "...            ...         ...     ...       ...   \n",
+      "5661   Sens direct         130    10.5         0   \n",
+      "5662   Sens direct         130    10.5         0   \n",
+      "5663   Sens direct         130    10.5         0   \n",
+      "5664   Sens direct         130    10.5         0   \n",
+      "5665   Sens direct         130       0         0   \n",
+      "\n",
+      "                                               geometry  \n",
+      "15    LINESTRING Z (573826.400 6276209.200 144.900, ...  \n",
+      "16    LINESTRING Z (572752.400 6275787.800 154.800, ...  \n",
+      "17    LINESTRING Z (576783.400 6283759.300 137.500, ...  \n",
+      "18    LINESTRING Z (578281.600 6275620.100 149.000, ...  \n",
+      "186   LINESTRING Z (570483.500 6281550.200 135.400, ...  \n",
+      "...                                                 ...  \n",
+      "5661  LINESTRING Z (575979.600 6276094.000 141.500, ...  \n",
+      "5662  LINESTRING Z (575642.900 6275982.600 141.900, ...  \n",
+      "5663  LINESTRING Z (575685.700 6275999.100 141.000, ...  \n",
+      "5664  LINESTRING Z (575303.900 6276012.800 140.900, ...  \n",
+      "5665  LINESTRING Z (575497.200 6275995.200 142.100, ...  \n",
+      "\n",
+      "[444 rows x 9 columns]\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -293,7 +339,7 @@
        "      <td>3</td>\n",
        "      <td>2.0</td>\n",
        "      <td>Sens inverse</td>\n",
-       "      <td>43</td>\n",
+       "      <td>50</td>\n",
        "      <td>5.5</td>\n",
        "      <td>0</td>\n",
        "      <td>LINESTRING Z (570070.900 6267362.500 155.500, ...</td>\n",
@@ -305,7 +351,7 @@
        "      <td>3</td>\n",
        "      <td>2.0</td>\n",
        "      <td>Sens direct</td>\n",
-       "      <td>5</td>\n",
+       "      <td>50</td>\n",
        "      <td>5.5</td>\n",
        "      <td>0</td>\n",
        "      <td>LINESTRING Z (569939.900 6268140.800 154.700, ...</td>\n",
@@ -317,7 +363,7 @@
        "      <td>3</td>\n",
        "      <td>1.0</td>\n",
        "      <td>Sens direct</td>\n",
-       "      <td>25</td>\n",
+       "      <td>50</td>\n",
        "      <td>5.5</td>\n",
        "      <td>0</td>\n",
        "      <td>LINESTRING Z (570019.800 6267652.700 153.600, ...</td>\n",
@@ -329,7 +375,7 @@
        "      <td>3</td>\n",
        "      <td>1.0</td>\n",
        "      <td>Sens direct</td>\n",
-       "      <td>25</td>\n",
+       "      <td>50</td>\n",
        "      <td>5.5</td>\n",
        "      <td>0</td>\n",
        "      <td>LINESTRING Z (569995.800 6267724.200 153.600, ...</td>\n",
@@ -341,7 +387,7 @@
        "      <td>3</td>\n",
        "      <td>1.0</td>\n",
        "      <td>Sens direct</td>\n",
-       "      <td>25</td>\n",
+       "      <td>50</td>\n",
        "      <td>3</td>\n",
        "      <td>0</td>\n",
        "      <td>LINESTRING Z (570006.100 6267667.000 153.300, ...</td>\n",
@@ -365,7 +411,7 @@
        "      <td>3</td>\n",
        "      <td>4.0</td>\n",
        "      <td>Sens direct</td>\n",
-       "      <td>25</td>\n",
+       "      <td>50</td>\n",
        "      <td>12</td>\n",
        "      <td>0</td>\n",
        "      <td>LINESTRING Z (573842.300 6277050.200 142.600, ...</td>\n",
@@ -377,7 +423,7 @@
        "      <td>3</td>\n",
        "      <td>4.0</td>\n",
        "      <td>Sens direct</td>\n",
-       "      <td>25</td>\n",
+       "      <td>50</td>\n",
        "      <td>12</td>\n",
        "      <td>0 3</td>\n",
        "      <td>LINESTRING Z (573708.400 6276801.100 143.200, ...</td>\n",
@@ -389,7 +435,7 @@
        "      <td>3</td>\n",
        "      <td>4.0</td>\n",
        "      <td>Sens direct</td>\n",
-       "      <td>25</td>\n",
+       "      <td>50</td>\n",
        "      <td>12</td>\n",
        "      <td>0 3</td>\n",
        "      <td>LINESTRING Z (573693.200 6276755.700 143.400, ...</td>\n",
@@ -401,7 +447,7 @@
        "      <td>3</td>\n",
        "      <td>4.0</td>\n",
        "      <td>Sens direct</td>\n",
-       "      <td>25</td>\n",
+       "      <td>50</td>\n",
        "      <td>12</td>\n",
        "      <td>0 3</td>\n",
        "      <td>LINESTRING Z (573773.700 6276936.800 144.200, ...</td>\n",
@@ -413,7 +459,7 @@
        "      <td>3</td>\n",
        "      <td>4.0</td>\n",
        "      <td>Sens direct</td>\n",
-       "      <td>25</td>\n",
+       "      <td>50</td>\n",
        "      <td>12</td>\n",
        "      <td>0</td>\n",
        "      <td>LINESTRING Z (573809.500 6276996.600 142.600, ...</td>\n",
@@ -438,17 +484,17 @@
        "10728  TRONROUT0000002330723235  Route à 1 chaussée          3       4.0   \n",
        "\n",
        "               SENS  VIT_MOY_VL LARGEUR VEHICULES  \\\n",
-       "2      Sens inverse          43     5.5         0   \n",
-       "3       Sens direct           5     5.5         0   \n",
-       "4       Sens direct          25     5.5         0   \n",
-       "5       Sens direct          25     5.5         0   \n",
-       "6       Sens direct          25       3         0   \n",
+       "2      Sens inverse          50     5.5         0   \n",
+       "3       Sens direct          50     5.5         0   \n",
+       "4       Sens direct          50     5.5         0   \n",
+       "5       Sens direct          50     5.5         0   \n",
+       "6       Sens direct          50       3         0   \n",
        "...             ...         ...     ...       ...   \n",
-       "10724   Sens direct          25      12         0   \n",
-       "10725   Sens direct          25      12       0 3   \n",
-       "10726   Sens direct          25      12       0 3   \n",
-       "10727   Sens direct          25      12       0 3   \n",
-       "10728   Sens direct          25      12         0   \n",
+       "10724   Sens direct          50      12         0   \n",
+       "10725   Sens direct          50      12       0 3   \n",
+       "10726   Sens direct          50      12       0 3   \n",
+       "10727   Sens direct          50      12       0 3   \n",
+       "10728   Sens direct          50      12         0   \n",
        "\n",
        "                                                geometry  \n",
        "2      LINESTRING Z (570070.900 6267362.500 155.500, ...  \n",
@@ -466,23 +512,25 @@
        "[7733 rows x 9 columns]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "road.loc[(road['IMPORTANCE']=='3'),'VIT_MOY_VL'] -= 20\n",
+    "print(road[road['IMPORTANCE']=='1'])\n",
+    "road.loc[(road['IMPORTANCE']=='1'),'VIT_MOY_VL'] = 110\n",
+    "road.loc[(road['IMPORTANCE']=='3'),'VIT_MOY_VL'] = 50\n",
     "road[road['IMPORTANCE']=='3']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "road.to_file(\"C:/Users/flavi/Travail/Switch-23/includes/road/speedLimitScenario/road3decrease3with20\")"
+    "road.to_file(\"C:/Users/flavi/Travail/Switch-23/includes/roads/speedLimitScenario/road3set1to110&3to50\")"
    ]
   },
   {
